[package]
name = "ffs-journal"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
asupersync = { workspace = true }
crc32c = { workspace = true }
ffs-types = { workspace = true }
ffs-error = { workspace = true }
ffs-block = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
criterion = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "journal_replay_apply_io_overlap"
harness = false

[[bench]]
name = "descriptor_decode"
harness = false

[[bench]]
name = "jbd2_data_block_prep"
harness = false

[lints]
workspace = true
