[package]
name = "ffs-mvcc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
asupersync = { workspace = true }
crc32c = { workspace = true }
ffs-block = { workspace = true }
ffs-error = { workspace = true }
ffs-types = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "wal_throughput"
harness = false

[lints]
workspace = true
