[package]
name = "ffs-mvcc"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
bench-instrumentation = []

[dependencies]
arc-swap = { workspace = true }
asupersync = { workspace = true }
crc32c = { workspace = true }
crossbeam-epoch = { workspace = true }
ffs-block = { workspace = true }
ffs-error = { workspace = true }
ffs-repair = { workspace = true }
ffs-types = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = "2"
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zstd = { workspace = true }
brotli = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
crc32c = { workspace = true }
proptest = { workspace = true }
sha2 = { workspace = true }
tikv-jemalloc-ctl = { version = "0.7", features = ["stats", "use_std"] }
tikv-jemallocator = { version = "0.7", features = ["stats"] }

[[bench]]
name = "wal_throughput"
harness = false

[[bench]]
name = "physical_visibility"
harness = false

[[bench]]
name = "read_visible"
harness = false

[[bench]]
name = "read_block_cow_owned"
harness = false

[[bench]]
name = "blockbuf_into_inner"
harness = false

[[bench]]
name = "read_block_uncompressed_clone_vs_share"
harness = false

[[bench]]
name = "read_visible_sequential"
harness = false

[[bench]]
name = "write_batch"
harness = false

[lints]
workspace = true

[[bench]]
name = "zstd_decompress_reuse"
harness = false

[[bench]]
name = "merge_range_overlay"
harness = false

[[bench]]
name = "commit_metrics_lock"
harness = false

[[bench]]
name = "commit_seq_alloc"
harness = false

[[bench]]
name = "active_snapshots_lock"
harness = false

[[bench]]
name = "active_snapshots_refcount"
harness = false

[[bench]]
name = "any_version_flag_false_sharing"
harness = false

[[bench]]
name = "shard_mask_false_sharing"
harness = false

[[bench]]
name = "write_blocks_alloc"
harness = false
