[package]
name = "ffs-ondisk"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ffs-types = { workspace = true }
crc32c = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
rustc-hash = "2"
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "casefold_key"
harness = false

[[bench]]
name = "btrfs_leaf_parse"
harness = false

[[bench]]
name = "dir_lookup"
harness = false

[[bench]]
name = "chunk_map"
harness = false

[[bench]]
name = "xattr_lookup"
harness = false

[[bench]]
name = "listxattr_names"
harness = false

[lints]
workspace = true

[[bench]]
name = "present_index_key"
harness = false

[[bench]]
name = "extent_resolve_hoist"
harness = false

[[bench]]
name = "extent_child_cache"
harness = false

[[bench]]
name = "extent_snapshot_copy"
harness = false
