[package]
name = "ffs-repair"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ffs-types = { workspace = true }
ffs-error = { workspace = true }
ffs-block = { workspace = true }
ffs-ondisk = { workspace = true }
asupersync = { workspace = true }
blake3 = { workspace = true }
crc32c = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
parking_lot = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "scrub_codec"
harness = false

[[bin]]
name = "ffs-demo"
path = "src/bin/ffs-demo.rs"

[lints]
workspace = true
