[package]
name = "ffs"
version = "0.2.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ffs-core = { workspace = true }

[dev-dependencies]
asupersync = { workspace = true }
ffs-ondisk = { workspace = true }

[lints]
workspace = true
