[package]
name = "ffs-ops"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
ffs-harness = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "ffs-ops"
path = "src/main.rs"

[lints]
workspace = true
